DockerVersion/src/main/java/com/example/dockerversion/error/PackageUpdateException.java
package com.example.dockerversion.error;

public class PackageUpdateException extends RuntimeException{
    public PackageUpdateException() {
        super("Packet didn't update");
    }
}
